--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "swiper": "^8.2.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
+    "vue3-cookies": "^1.0.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
