--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "gsap": "^3.10.4",
     "swiper": "^8.2.5",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
