--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vuelidate/core": "^2.0.0-alpha.42",
     "@vuelidate/validators": "^2.0.0-alpha.30",
     "core-js": "^3.8.3",
+    "firebase": "^9.9.0",
     "gsap": "^3.10.4",
     "swiper": "^8.2.5",
     "vue": "^3.2.13",
