--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.0-alpha.42",
     "@vuelidate/validators": "^2.0.0-alpha.30",
+    "chart.js": "^3.9.1",
     "core-js": "^3.8.3",
     "firebase": "^9.9.0",
     "gsap": "^3.10.4",
     "swiper": "^8.3.2",
     "vue": "^3.2.13",
+    "vue-chartjs": "^4.1.1",
     "vue-router": "^4.0.3",
     "vue3-cookies": "^1.0.6",
     "vuex": "^4.0.0"
